tests/NormalTests/paczka1/small_fuzzy/93013362.err
Error in line 1: aGK S141 18,8
Error in line 3: aGK A775 54,5
Error in line 4: aGK S141 94,9
Error in line 9: xuLUVi S141 57,1
